--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-numpy
 pandas
+numpy
 scikit-learn
-sklearn-evaluation
 matplotlib
-imblearn
-PyWavelets
-keras
-tensorflow
+seaborn
+sktime
+xgboost
